--- a/settings.json
+++ b/settings.json
@@ -6,20 +6,19 @@
         "fy": 365.456,
         "cx": 254.878,
         "cy": 205.395,
-        "min_range": 0.5,
         "max_range": 2.5
     },
 
     "bounding_box": {
-        "bbx_min": [0.0,0.0,0.0],
-        "bbx_max": [5.0,5.0,5.0]
+        "bbx_min": [0.0,0.2,-1.645],
+        "bbx_max": [2.13,2.0,0.0]
     },
 
     "plants_region": {
         "plants": [
             {
-                "min": { "x": 0.1, "y": 0.2, "z": 0.0 },
-                "max": { "x": 0.3, "y": 0.4, "z": 0.5 }
+                "min": { "x": 1.035, "y": 0, "z": -1.40 },
+                "max": { "x": 1.675, "y": 0.56, "z": -1.062 }
             }
         ]
     },
@@ -30,14 +29,14 @@
     },
 
     "octomap": {
-        "resolution": 0.05
+        "resolution": 0.1
     },
 
     "xyzypgenf": {
-        "dx": 0.1,
+        "dx": 0.3,
         "dy": 0.1,
-        "dz": 0.1,
-        "dyaw": 30,
-        "dpitch": 30
+        "dz": 0.3,
+        "dyaw": 45,
+        "dpitch": 45
     }
 }
